[project]
name = "google-timesfm-tutorial"
version = "0.1.0"
description = "Zero-to-mastery tutorial notebook for Google TimesFM"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "accelerate>=1.14.0",
    "aiohttp>=3.14.1",
    "fsspec>=2026.6.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "timesfm[torch,xreg]>=2.0.2",
    "transformers>=5.13.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "nbconvert>=7.17.1",
    "tqdm>=4.68.3",
]
